--- a/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
+++ b/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
@@ -736,6 +736,7 @@
 	"Nebuchadnezzar II":{//Babylonian Leader
 		Italian:"Nabucodonosor II"
 		French:"Nabuchodonosor II"
+		Simplified_Chinese:"尼布甲尼撒二世"
 	}
 	
 	"Greece":{	
@@ -752,10 +753,12 @@
 	"Alexander":{
 		Italian:"Alessandro"
 		French:"Alexandre le Grand"
+		Simplified_Chinese:"亚历山大"
 	},
 
 	"City-State Influence degrades at half and recovers at twice the normal rate": {
-		L'influenza sulle città-stato diminuisce il doppio più lentamente e aumenta il doppio più velocemente.
+		Simplified_Chinese:"对城邦影响力衰减速度减半，恢复速度加倍"
+		Italian:"L'influenza sulle città-stato diminuisce il doppio più lentamente e aumenta il doppio più velocemente."
 	},
 
 	"China":{	
@@ -768,6 +771,10 @@
 		Portuguese:"China"
 		German:"China"
 	}
+
+	"Wu Zetian":{
+		Simplified_Chinese:"武则天"
+	},
 
 	"Great general provides double combat bonus, and spawns 50% faster":{
 		Italian:"I Grandi Generali concedono nascono il 50% più in fretta e il loro bonus è raddoppiato"
@@ -794,6 +801,7 @@
 	"Ramesses II":{
 		Italian:"Ramses II"
 		French:"Ramsès II"
+		Simplified_Chinese:"拉美西斯二世"
 	}
 
 	"+20% production towards Wonder construction":{
@@ -821,6 +829,7 @@
 	"Elizabeth":{
 		Italian:"Elisabetta"
 		//same in french
+		Simplified_Chinese:"伊丽莎白"
 	}
 
 	"+2 movement for all naval units":{
@@ -848,6 +857,7 @@
 	"Napoleon":{
 		Italian:"Napoleone"
 		French:"Napoléon"
+		Simplified_Chinese:"拿破仑"
 	}
 
 	"+2 Culture per turn from cities before discovering Steam Power":{
@@ -875,6 +885,7 @@
 	"Catherine":{
 		Italian:"Caterina II"
 		French:"Catherine II"
+		Simplified_Chinese:"叶卡捷琳娜二世"
 	}
 
 	"Strategic Resources provide +1 Production, and Horses, Iron and Uranium Resources provide double quantity":{
@@ -902,6 +913,7 @@
 	"Augustus Caesar":{
 		Italian:"Cesare Augusto"
 		French:"Jule César"
+		Simplified_Chinese:"奥古斯都·恺撒"
 	}
 
 	"+25% Production towards any buildings that already exist in the Capital":{
@@ -930,6 +942,7 @@
 	"Harun al-Rashid":{
 		Italian:"Harun al-Rashid" //Same as Italian
 		French:"Hâroun ar-Rachîd"
+		Simplified_Chinese:"哈伦·拉希德"
 	}
 
 	"+1 Gold from each Trade Route, Oil resources provide double quantity":{
@@ -953,6 +966,7 @@
 	"George Washington":{
 		Italian:"George Washington" //Same as Italian
 		//same in french
+		Simplified_Chinese:"乔治·华盛顿"
 	}
 
 	"All land military units have +1 sight, 50% discount when purchasing tiles":{
@@ -980,6 +994,7 @@
 	"Oda Nobunaga":{
 		Italian:"Oda Nobunaga" //Same as Italian
 		//same in french
+		Simplified_Chinese:"织田信长"
 	}
 
 	"Units fight as though they were at full strength even when damaged":{
@@ -1003,45 +1018,53 @@
 	"Otto von Bismark":{
 		Italian:"Otto von Bismark" //Same as Italian
 		French:"Otto von Bismarck"
+		Simplified_Chinese:"奥托·冯·俾斯麦"
 	}
 
-	"67% chance to earn 25 Gold and recruit a Barbarian unit from a conquered encampment. -25% land units maintenance.":{
+	"67% chance to earn 25 Gold and recruit a Barbarian unit from a conquered encampment, -25% land units maintenance.":{
 		Italian:"67% di probabilità di ottenere 25 Oro e reclutare un'unità barbara da un accampamento catturato. -25% mantenimento delle unità terrestri."
 		French:"67% de chance de gagner 25 or et d'enroler une unité barbare lors de la prise d'un campement barbare. -25% de coût de maintenance pour les unités terrestres."
+		Simplified_Chinese:"击败蛮族营地中的蛮族单位有67%几率得到25金钱并使其加入，陆上单位维护费-25%"
 	}
 	
 	"India":{
 		Italian:"India"
 		French:"Inde"
 		Portuguese:"Índia"
+		Simplified_Chinese:"印度"
 	}
 
 	"Gandhi":{
 		Italian:"Gandhi" //Same as Italian
 		//same in french
+		Simplified_Chinese:"甘地"
 	}
 
-	"Unhappiness from number of Cities doubled. Unhappiness from number of Citizens halved.":{
+	"Unhappiness from number of Cities doubled, Unhappiness from number of Citizens halved.":{
 		Italian:"Infelicità dal numero di Città raddoppiata, Infelicità dal numero di Cittadini dimezzata."
 		Portuguese:"Tristeza por número de cidades dobrada e tristeza por número de cidadões reduzida pela metade"
 		French:"Le mécontentement dut au nombre de villes est doublé. Le mécontentement dut au nombre de citoyens est réduit de moitié"
+		Simplified_Chinese:"城市数量导致的不满加倍，市民数量导致的不满减半"
 	}
 
 	"The Ottomans":{
 		Italian:"Turchia"
 		French:"Turquie"
 		Portuguese:"Turquia"
+		Simplified_Chinese:"奥斯曼"
 	}
 
 	"Suleiman I":{
 		Italian:"Solimano I"
 		French:"Soliman le Magnifique"
+		Simplified_Chinese:"苏莱曼一世"
 	}
 
 	"Pay only one third the usual cost for naval unit maintenance. Melee naval units have a 1/3 chance to capture defeated naval units.":{
 		Italian:"Mantenimento delle unità navali ridotto a un terzo rispetto al normale. Le unità navali ravvicinate hanno un 34% di probabilità di catturare le unità navali nemiche sconfitte."
 		Portuguese:"50% de chance de converter uma unidade naval bárbara para ti e ganhar 25 ouro. Gaste apenas 1/3 do custo normal para manter unidades navais."
 		French:"50% de chance de convertir une unité barbare navale et de gagner 25 Or. Les unités navales coutent 3 fois moins à entretenir."
+		Simplified_Chinese:"海上单位维护费为正常值的1/3，海军近战单位拥有1/3几率俘获战败的敌方海军单位"
 	}
 
 	"Korea":{
