--- a/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
+++ b/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
@@ -431,21 +431,25 @@
 	"Cultured":{
 		Italian:"Acculturata"
 		French:"Cultivée"
+		Simplified_Chinese:"文化型"
 	}
 	
 	"Maritime":{
 		Italian:"Marittima"
 		French:"Maritime" //same
+		Simplified_Chinese:"航海型"
 	}
 	
 	"Mercantile":{
 		Italian:"Mercantile"
 		//same in french
+		Simplified_Chinese:"商业型"
 	}
 
 	"Militaristic":{
 		Italian:"Militaristica"
 		French:"Militarisée"
+		Simplified_Chinese:"军事型"
 	}
 
 ////// Trade	
@@ -691,13 +695,14 @@
 	
 	"[resourceName] not required":{
 		Italian:"Risorsa [resourceName] non richiesta"
-		Simplified_Chinese:"不需要[resourceName]"
+		Simplified_Chinese:"无需战略资源[resourceName]"
 		French:"[resourceName] non requis"
 		Portuguese:"[resourceName] não requirido"
 	}
 	
-	"Does not have ":{ // as in Does not have +1 Visibility Range (or any other unit unique)
+	"Lost ability":{ // as in Does not have +1 Visibility Range (or any other unit unique)
 		Italian:"Non possiede "
+		Simplified_Chinese:"失去能力"
 	}
 	
 	"National ability":{ // the unique ability that each nation has
@@ -1071,12 +1076,15 @@
 		Italian:"Corea"
 		French:"Corée"
 		Portuguese:"Coréia"
+		Simplified_Chinese:"朝鲜"
 	}
 
-	"+1 Science for all Specialists and Great Person tile improvements. Receive a tech boost each time a scientific building/Wonder is built in the Korean Capital.":{
-		Italian:"+1 Scienza per ogni Specialista e miglioramento Grande Personaggio. Ricevi uno sprint tecnologico ogni volta che la tua Capitale costruisce un edificio o una Meraviglia scientifica."
-		Portuguese:"+1 ciência por todas as melhorias de terras de especialístas e grandes pessoas. Receba um bonus de pesquisa a cada construção/maravilha ciêntifica é construida na capital"
-		French:"+1 Science pour chaque spécialistes et amélioration de case de personnage illustre. Reçoit un bonus de science à chaque fois qu'un batiment ou une merveille scientifique est  construit dans la capitale"
+	"Sejong":{
+		Simplified_Chinese:"李裪"
+	}
+
+	"+2 Science for all specialists and Great Person tile improvements":{
+		Simplified_Chinese:"所有专业人员和所有伟人设施+2科研"
 	}
 
 	/*
