--- a/android/assets/jsons/Translations/Other.json
+++ b/android/assets/jsons/Translations/Other.json
@@ -392,7 +392,7 @@
 		Romanian:"Prădare"
 		Dutch:"Plundering"
 		Spanish:"Pillaje"
-		Simplified_Chinese:"掠夺"
+		Simplified_Chinese:"劫掠"
 	}
 	
 	"Do you really want to disband this unit?":{
