--- a/android/assets/jsons/Translations/Units,Promotions.json
+++ b/android/assets/jsons/Translations/Units,Promotions.json
@@ -712,6 +712,7 @@
 		Italian:"Cura [amountHealed] PF quando uccide un'unità nemica"
 		French:"Soigne [amountHealed] dégâts si il tue une unité"
 		Russian:"Восстаналивает [amountHealed] здоровья при уничтожении юнита"
+		Simplified_Chinese:"消灭敌方单位后回复50点损伤"
 	}
 
 	"Minuteman":{ // american unique
@@ -767,6 +768,7 @@
 		Italian:"Nessun costo di movimento per il saccheggio"
 		French:"L'action pillage ne coûte pas de point de mouvement"
 		Russian:"Разграбление не тратит очков передвижения"
+		Simplified_Chinese:"劫掠不消耗移动力"
 	}
 	
 
@@ -987,7 +989,7 @@
 
 	"Bonus as Attacker [amount]%":{
 		Italian:"[amount]% Bonus in attacco"
-		Simplified_Chinese:"主动攻击时+75%战斗力"
+		Simplified_Chinese:"主动发起攻击时+[amount]%战斗力"
 		French:"Bonus en tant qu'attaquant +[amount]%"
 		Russian:"Бонус при атаке +[amount]%"
 	}
@@ -1031,8 +1033,16 @@
 		Italian:"[percent]% probabilità di intercettare attacchi aerei"
 		French:"[percent]% chance d'intercepter une attaque aérienne"
 		Russian:"[percent]% шанс перехвата воздушных атак"
+		Simplified_Chinese:"[percent]%几率拦截来袭的敌军飞机"
 	}
 	
+	"6 tiles in every direction always visible":{
+		Simplified_Chinese:"6格视野范围内可见"
+	}
+
+	"Bonus vs Bomber 150%":{
+		Simplified_Chinese:"对战轰炸机时+150%战斗力"
+	}
 	
 	"Great War Bomber":{
 		Italian:"Bombardiere della Grande Guerra"
@@ -1160,6 +1170,10 @@
 
 	"Zero":{
 		Simplified_Chinese:"零式战斗机"
+	}
+
+	"Bonus vs Fighter 33%":{
+		Simplified_Chinese:"对战战斗机时+33%战斗力"
 	}
 
 	"Helicopter Gunship":{
@@ -1384,7 +1398,7 @@
 		German:"Im Vorteil gegen [unitType]" // Gender sensitive --> not necessary as we talk about "types" not specific units
 		Dutch:"Voordeel tegen [unitType]"
 		Spanish:"Bonus contra [unitType]"
-		Simplified_Chinese:"对战[unitType]时战斗力加成："
+		Simplified_Chinese:"对战[unitType]时战斗力+"
 		Portuguese:"Bonus contra [unitType]"
 	}
 
@@ -1396,7 +1410,7 @@
 		German:"Im Nachteil gegen [unitType]" // Gender sensitive --> not necessary as we talk about "types" not specific units
 		Dutch:"Nadeel tegen [unitType]"
 		Spanish:"Penalización contra [unitType]"
-		Simplified_Chinese:"对战[unitType]时战斗力减成："
+		Simplified_Chinese:"对战[unitType]时战斗力-"
 		Portuguese:"Penalidade contra [unitType]"
 	}
 	
@@ -1668,6 +1682,14 @@
 		Simplified_Chinese:"列阵II级"
 	}
 
+	"Bonus vs Mounted 33%":{
+		Simplified_Chinese:"对战骑乘单位时+33%战斗力"
+	}
+
+	"Bonus vs Mounted 50%":{
+		Simplified_Chinese:"对战骑乘单位时+50%战斗力"
+	}
+
 	"Blitz":{
 		Italian:"Incursione"
 		German:"Blitz"
@@ -1835,7 +1857,7 @@
 
 	"Double movement rate through Forest and Jungle":{
 		Italian:"Movimento doppio attraverso Foreste e Giungle."
-		Simplified_Chinese:"森林和丛林移动时双倍移动力"
+		Simplified_Chinese:"通过森林或丛林时移动速度加倍"
 		French:"Déplacement doublé dans la Forêt et la Jungle"
 		Russian:"Передвижение через Лес и Джунгли тратит вдвое меньше очков действия"
 	}
@@ -2011,7 +2033,7 @@
 		Italian:"+33% Forza contro le Città"
 		French:"Bonus contre les villes +33%"
 		Russian:"Бонус против городов +33%"
-		Simplified_Chinese:"攻击城市时+33%战斗力"
+		Simplified_Chinese:"攻城时+33%战斗力"
 	}
 
 	"Siege II":{
@@ -2032,7 +2054,35 @@
 		Italian:"+34% Forza contro le Città"
 		French:"Bonus contre les villes +34%"
 		Russian:"Бонус против городов +34%"
-		Simplified_Chinese:"攻击城市时+34%战斗力"
+		Simplified_Chinese:"攻城时+34%战斗力"
+	}
+
+	"Bonus vs City 50%":{
+		Italian:"+50% Forza contro le Città"
+		French:"Bonus contre les villes +50%"
+		Russian:"Бонус против городов +50%"
+		Simplified_Chinese:"攻城时+50%战斗力"
+	}
+
+	"Bonus vs City 200%":{
+		Italian:"+200% Forza contro le Città"
+		French:"Bonus contre les villes +200%"
+		Russian:"Бонус против городов +200%"
+		Simplified_Chinese:"攻城时+200%战斗力"
+	}
+
+	"Bonus vs City 15%":{
+		Italian:"+15% Forza contro le Città"
+		French:"Bonus contre les villes +15%"
+		Russian:"Бонус против городов +15%"
+		Simplified_Chinese:"攻城时+15%战斗力"
+	}
+
+	"Bonus vs City 30%":{
+		Italian:"+30% Forza contro le Città"
+		French:"Bonus contre les villes +30%"
+		Russian:"Бонус против городов +30%"
+		Simplified_Chinese:"攻城时+30%战斗力"
 	}
 
 	"Evasion":{
@@ -2047,6 +2097,26 @@
 		French:"Réduit les dégâts des unités d'interception de 50%"
 		Russian:"Уменьшает урон от перехвата на 50%"
 		Simplified_Chinese:"遭受拦截时的损伤-50%"
+	}
+
+	"Bonus when intercepting [amount]%":{
+		Simplified_Chinese:"执行拦截任务时+[amount]%战斗力"
+	}
+
+	"Ambush I":{
+		Simplified_Chinese:"伏击I级"
+	}
+
+	"Ambush II":{
+		Simplified_Chinese:"伏击II级"
+	}
+
+	"Bonus vs Armor 25%":{
+		Simplified_Chinese:"对战装甲单位时+33%战斗力"
+	}
+	
+	"Bonus vs Armor 100%":{
+		Simplified_Chinese:"对战装甲单位时+100%战斗力"
 	}
 
 }
