Added confirmation popup when deleting maps

--- a/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
+++ b/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
@@ -458,7 +458,21 @@
 		Portuguese:"Salvo em"
 	}
 	
-	// Options
+	////////////// Load map
+	
+	"Load map":{
+	}
+	
+	"Are you sure you want to delete this map?":{
+	}
+	
+	"Upload":{
+	}
+	
+	"Could not upload map!":{
+	}
+	
+	////////////// Options
 	
 	"Options":{
 		Italian:"Opzioni"
