--- a/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
+++ b/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
@@ -1038,7 +1038,7 @@
 		Italian:"Stati Uniti"
 		Romanian:"Statele Unite"
 		Spanish:"Estados Unidos"
-		Simplified_Chinese:"美国"
+		Simplified_Chinese:"美利坚"
 		German:"Amerika"
 		French:"Etats-Unis"
 		Portuguese:"América"
