--- a/android/assets/jsons/Translations/Other.json
+++ b/android/assets/jsons/Translations/Other.json
@@ -1386,7 +1386,7 @@
 		French:"Bonheur de base"
 		Romanian:"Fericire de bază"
 		Spanish:"Felicidad base"
-		Simplified_Chinese:"基础快乐度"
+		Simplified_Chinese:"基础快乐"
 		Portuguese:"Felicidade base"
 		German:"Grundzufriedenheit"
 	}
